--- a/views/Home/index.html
+++ b/views/Home/index.html
@@ -37,7 +37,7 @@
 
             </div>
             <div class="card-footer">
-                <a href="" class="btn btn-primary"> Logout</a>
+                <a href="/logout" class="btn btn-primary">Logout</a>
             </div>
         </div>
     </div>
