--- a/views/auth/login.html
+++ b/views/auth/login.html
@@ -36,8 +36,14 @@
 </nav>
        <div class="container mt-5">
            <h3 style="text-align: center; font-weight: bold">Login</h3>
+           {{if .error }}
+               <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                   {{.error}}
+                   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+               </div>
+           {{end}}
            <hr>
-           <form action="">
+           <form action="/login" method="post">
                <div class="mb-2">
                    <label for="username" class="mb-2" style="font-size: 18px;">Username</label>
                    <input type="text" id="username"  name="username" class="form-control rounded-0" placeholder="Username...">
@@ -54,5 +60,6 @@
            <hr>
            <p>Does not have Account ? <a href="/register">Register</a></p>
        </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
