Register function tayyarlanyldy!!!

--- a/views/Home/index.html
+++ b/views/Home/index.html
@@ -33,7 +33,7 @@
         <div class="card">
             <div class="card-header">Home</div>
             <div class="card-body">
-                <h3>Welcome, User FullName</h3>
+                <h3>Welcome, {{.user_fullName}}</h3>
 
             </div>
             <div class="card-footer">
