--- a/views/auth/register.html
+++ b/views/auth/register.html
@@ -36,23 +36,49 @@
 </nav>
 <div class="container mt-5">
     <h3 style="text-align: center; font-weight: bold">Register</h3>
+    {{if .user_exists }}
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            {{.user_exists}}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    {{end}}
     <hr>
-    <form action="">
+
+    <form method="post" action="/register">
         <div class="mb-2">
             <label for="username" class="mb-2" style="font-size: 18px;">Username</label>
-            <input type="text" name="username" id="username" class="form-control rounded-0" placeholder="Username...">
+            <input type="text" name="username" id="username" class="form-control rounded-0 {{if .validation.username_validate }} is-invalid {{end}} " placeholder="Username...">
+            {{if .validation.username_validate}}
+            <span class="text-danger" style="margin-left: 1%;">{{.validation.username_validate}}</span>
+            {{end}}
         </div>
         <div class="mb-2">
             <label for="full_name" class="mb-2" style="font-size: 18px;">Full name</label>
-            <input type="text" id="full_name" name="full_name" class="form-control rounded-0" placeholder="Full name...">
+            <input type="text" id="full_name" name="full_name" class="form-control rounded-0 {{if .validation.FullName_validate }} is-invalid {{end}}" placeholder="Full name...">
+            {{if .validation.FullName_validate}}
+                <span class="text-danger" style="margin-left: 1%;">{{.validation.FullName_validate}}</span>
+            {{end}}
         </div>
         <div class="mb-2">
             <label for="email" class="mb-2" style="font-size: 18px;">Email</label>
-            <input type="email" id="email" name="email" class="form-control rounded-0" placeholder="Email...">
+            <input type="email" id="email" name="email" class="form-control rounded-0  {{if .validation.email_validate }} is-invalid {{end}}" placeholder="Email...">
+            {{if .validation.email_validate}}
+                <span class="text-danger" style="margin-left: 1%;">{{.validation.email_validate}}</span>
+            {{end}}
         </div>
         <div class="mb-2">
             <label for="password" class="mb-2" style="font-size: 18px;">Password</label>
-            <input type="password" id="password" name="password" class="form-control rounded-0" placeholder="Password...">
+            <input type="password" id="password" name="password" class="form-control rounded-0  {{if .validation.password_validate }} is-invalid {{end}}" placeholder="Password...">
+            {{if .validation.password_validate}}
+                <span class="text-danger" style="margin-left: 1%;">{{.validation.password_validate}}</span>
+            {{end}}
+        </div>
+        <div class="mb-2">
+            <label  for="password" class="mb-2" style="font-size: 18px;">Confirm Password</label>
+            <input  type="password" id="password" name="confirm_password" class="form-control rounded-0 {{if .validation.ConfirmPassword_validate }} is-invalid {{end}}" placeholder="Password...">
+            {{if .validation.ConfirmPassword_validate}}
+                <span class="text-danger" style="margin-left: 1%;">{{.validation.ConfirmPassword_validate}}</span>
+            {{end}}
         </div>
         <div class="mb-2">
             <button type="submit"  class="btn btn-success w-100">Register</button>
@@ -61,5 +87,6 @@
     <hr>
     <p>Does not have Account ? <a href="/register">Register</a></p>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
