--- a/views/Home/index.html
+++ b/views/Home/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Go Auth</a>
+        <a class="navbar-brand" href="/">Go Auth with Session</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -17,13 +17,14 @@
                 <li class="nav-item">
                     <a class="nav-link " aria-current="page" href="/">Home</a>
                 </li>
+                {{if eq .user_auth false }}
                 <li class="nav-item">
                     <a class="nav-link" href="/login">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/register">Register</a>
                 </li>
-
+                {{end}}
             </ul>
 
         </div>
@@ -37,9 +38,13 @@
 
             </div>
             <div class="card-footer">
-                <a href="/logout" class="btn btn-primary">Logout</a>
+                <form method="post" action="/logout">
+                    <button class="btn btn-primary">Logout</button>
+                </form>
+{{/*                <a href="/logout" class="btn btn-primary">Logout</a>*/}}
             </div>
         </div>
     </div>
+<script src="/public/assets/bootstrap/js/bootstrap.min.js"  crossorigin="anonymous"></script>
 </body>
 </html>
