--- a/views/auth/login.html
+++ b/views/auth/login.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.min.css">
+    <style>
+        .container{
+            max-width: 500px;
+        }
+    </style>
 </head>
-<style>
-    .container{
-        max-width: 500px;
-    }
-</style>
+
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">Go Auth</a>
+    <div  class="container-fluid">
+        <a class="navbar-brand" href="/">Go Auth with Session</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,9 +29,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/register">Register</a>
                 </li>
-
             </ul>
-
         </div>
     </div>
 </nav>
@@ -53,20 +52,25 @@
            <form action="/login" method="post">
                <div class="mb-2">
                    <label for="username" class="mb-2" style="font-size: 18px;">Username</label>
-                   <input type="text" id="username"  name="username" class="form-control rounded-0" placeholder="Username...">
+                   <input type="text" name="username" value="{{.user.Username}}" id="username" class="form-control rounded-0 {{if .validation.Username }} is-invalid {{end}} " placeholder="Username...">
+                   {{if .validation.Username}}
+                       <span class="text-danger" style="margin-left: 1%;">{{.validation.Username}}</span>
+                   {{end}}
                </div>
                <div class="mb-2">
                    <label for="password" class="mb-2" style="font-size: 18px;">Password</label>
-                   <input type="password" id="password" name="password" class="form-control rounded-0" placeholder="Password...">
+                   <input type="password" id="password" name="password"  class="form-control rounded-0  {{if .validation.Password }} is-invalid {{end}}" placeholder="Password...">
+                   {{if .validation.Password}}
+                       <span class="text-danger" style="margin-left: 1%;">{{.validation.Password}}</span>
+                   {{end}}
                </div>
                <div class="mb-2">
-
                   <button type="submit"  class="btn btn-success w-100">Login</button>
                </div>
            </form>
            <hr>
            <p>Does not have Account ? <a href="/register">Register</a></p>
        </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="/public/assets/bootstrap/js/bootstrap.min.js"  crossorigin="anonymous"></script>
 </body>
 </html>
