--- a/views/auth/register.html
+++ b/views/auth/register.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/public/assets/bootstrap/css/bootstrap.min.css">
+    <style>
+        .container{
+            max-width: 500px;
+        }
+    </style>
 </head>
-<style>
-    .container{
-        max-width: 500px;
-    }
-</style>
+
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Go Auth</a>
+        <a class="navbar-brand" href="/">Go Auth with Session</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -85,8 +86,8 @@
         </div>
     </form>
     <hr>
-    <p>Does not have Account ? <a href="/register">Register</a></p>
+    <p>Does not have Account ? <a href="/login">Login</a></p>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="/public/assets/bootstrap/js/bootstrap.min.js"  crossorigin="anonymous"></script>
 </body>
 </html>
